--- a/rpc-qe-jobs/onmetal-all-in-one/deploy-rpc.yml
+++ b/rpc-qe-jobs/onmetal-all-in-one/deploy-rpc.yml
@@ -96,10 +96,11 @@
             sudo cp rpcd/etc/openstack_deploy/user_*_defaults.yml /etc/openstack_deploy
             sudo cp rpcd/etc/openstack_deploy/user_rpco_secrets.yml /etc/openstack_deploy
             sudo cp rpcd/etc/openstack_deploy/env.d/* /etc/openstack_deploy/env.d
+            sudo -E sh -c 'echo "
+            apply_security_hardening: false" >> /etc/openstack_deploy/user_osa_variables_overrides.yml'
 
             export DEPLOY_ELK=yes
             export DEPLOY_HAPROXY=yes
-            export DEPLOY_HARDENING=no
             export DEPLOY_TEMPEST=yes
 
             sudo -E ./scripts/deploy.sh
