Allowing concurrent runs for Horizon and Kibana tests

--- a/rpc-qe-jobs/horizon-tests.yml
+++ b/rpc-qe-jobs/horizon-tests.yml
@@ -3,6 +3,7 @@
     description: Runs Horizon integration tests against a given endpoint.
     logrotate:
         daysToKeep: 60
+    concurrent: true
     node: general
     parameters:
         - string:
