--- a/rpc-qe-jobs/onmetal-all-in-one/deploy-rpc.yml
+++ b/rpc-qe-jobs/onmetal-all-in-one/deploy-rpc.yml
@@ -31,8 +31,14 @@
             default: master
         - string:
             name: OSA_BRANCH
-            default: stable/mitaka
+            default: stable/newton
             description: Used only in OnMetal-AIO-OpenStack-Setup
+        - choice:
+            name: DEFAULT_IMAGE
+            description: Version of Ubuntu to use on multi-node VMs
+            choices:
+                - 16.04
+                - 14.04.4
         - bool:
             name: PARTITION_HOST
             default: true
@@ -57,6 +63,7 @@
             #!/bin/bash
             cd multi-node-aio
             export OSA_BRANCH=$OSA_BRANCH
+            export DEFAULT_IMAGE=$DEFAULT_IMAGE
             export PARTITION_HOST=$PARTITION_HOST
             export RUN_OSA=false
             export SSHKEY=$(sudo cat /root/.ssh/id_rsa.pub)
