Adding nightly trigger for pipeline

--- a/rpc-qe-jobs/onmetal-all-in-one/workflow-pipeline.yml
+++ b/rpc-qe-jobs/onmetal-all-in-one/workflow-pipeline.yml
@@ -2,6 +2,8 @@
     name: OnMetal-All-In-One-Pipeline
     project-type: workflow
     concurrent: true
+    triggers:
+        - timed: 'H 4 * * *'
     parameters:
         - bool:
             name: CLEANUP
