--- a/rpc-qe-jobs/onmetal-all-in-one/workflow-pipeline.yml
+++ b/rpc-qe-jobs/onmetal-all-in-one/workflow-pipeline.yml
@@ -43,7 +43,7 @@
         - string:
             name: IMAGE
             description: Default is OnMetal - Ubuntu 14.04 LTS (Trusty Tahr)
-            default: 9dc2bf0a-7771-45cd-a7f9-ce86ce94c548
+            default: 2c5482a0-1dab-4a42-aefb-ae86116374e3
         - string:
             name: SERVER_NAME
             description: >
@@ -84,7 +84,7 @@
                 string(name: 'OSA_OPS_BRANCH', value: OSA_OPS_BRANCH),
                 string(name: 'OSA_BRANCH', value: OSA_BRANCH),
                 string(name: 'RPC_TAG', value: RPC_TAG),
-                string(name: 'TEMPEST_TESTS', value: TEMPEST_TESTS,
+                string(name: 'TEMPEST_TESTS', value: TEMPEST_TESTS),
                 string(name: 'DEFAULT_IMAGE', value: DEFAULT_IMAGE)
             ]
             try {
